Modify grid properties for trending, fix misaligns

--- a/main.css
+++ b/main.css
@@ -130,7 +130,7 @@ main {
   background-color: rgb(236, 236, 236);
 
   display: grid;
-  grid-template: auto auto 1fr / 3fr 1fr;
+  grid-template: auto auto auto / 3fr 1fr;
   grid-template-areas:
     "profile-bar profile-bar"
     "projects announcements"
@@ -185,7 +185,7 @@ main {
   padding-left: 48px;
 
   display: grid;
-  grid-template: auto 1fr 1fr 1fr / repeat(auto-fit, minmax(300px, 1fr));
+  grid-template: auto 1fr 1fr 1fr / repeat(auto-fill, minmax(300px, 1fr));
   row-gap: 32px;
   column-gap: 48px;
 }
@@ -193,6 +193,10 @@ main {
 main > div > h3 {
   grid-column: 1 / -1;
   margin: 0;
+}
+
+.projects > h3 {
+  margin-bottom: -16px;
 }
 
 .project {
@@ -243,6 +247,9 @@ main > div > h3 {
 .announcement > p {
   margin-top: 4px;
   font-size: 13px;
+  height: 3lh;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .announcement + .announcement {
@@ -258,9 +265,10 @@ h4 {
   grid-area: trending;
 
   display: grid;
-  grid-template-rows: auto 1fr;
+  grid-template-rows: auto auto;
   grid-template-columns: 1fr;
   row-gap: 16px;
+  align-content: start;
 }
 
 .trending-project {
@@ -273,6 +281,7 @@ h4 {
 
 .trending-container {
   row-gap: 16px;
+  align-content: start;
 }
 
 .profile {
